# arctic

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.md  mkdocs.yml  pyproject.toml  setup.py
arctic/: __init__.py  _cache.py  _compression.py  _config.py  _util.py  arctic.py  auth.py  decorators.py  hooks.py  hosts.py  multi_index.py
arctic/asynchronous/: __init__.py  _workers_pool.py  async_arctic.py  async_utils.py
arctic/chunkstore/: _chunker.py  chunkstore.py  date_chunker.py
arctic/chunkstore/tools/: __init__.py
arctic/date/: __init__.py  _daterange.py  _generalslice.py  _mktz.py  _util.py
arctic/fixtures/: arctic.py
arctic/scripts/: arctic_copy_data.py  arctic_create_user.py  arctic_delete_library.py  arctic_enable_sharding.py  arctic_fsck.py  arctic_init_library.py  arctic_list_libraries.py  arctic_prune_versions.py  utils.py
arctic/serialization/: _serializer.py  incremental.py  numpy_arrays.py  numpy_records.py
arctic/store/: _ndarray_store.py  _pandas_ndarray_store.py  _pickle_store.py  _version_store_utils.py  audit.py  bitemporal_store.py  bson_store.py  config_store.py  metadata_store.py  sequence_store.py  version_store.py  versioned_item.py
arctic/tickstore/: tickstore.py  toplevel.py
benchmarks/: benchmarks.py  fast_serializable_check.py
benchmarks/fwd_pointers/: fwd_benchmarks.py
benchmarks/lz4_tuning/: benchmark_lz4.py
docs/superpowers/plans/: 2026-05-22-configstore.md  2026-06-04-remove-deprecated-backward-compat-code.md
docs/superpowers/specs/: 2026-05-22-configstore-design.md
howtos/: 201507_demo_pydata.py  how_to_custom_arctic_library.py  how_to_use_arctic.py
tests/: util.py
tests/integration/: test_arctic.py  test_arctic_multithreading.py  test_compress_integration.py  test_concurrent_append.py  test_decorators.py  test_howtos.py  test_utils.py
tests/integration/chunkstore/: test_chunkstore.py  test_fixes.py  test_utils.py
tests/integration/scripts/: test_arctic_fsck.py  test_copy_data.py  test_delete_library.py  test_enable_sharding.py  test_initialize_library.py  test_list_libraries.py  test_prune_versions.py
tests/integration/store/: test_bitemporal_store.py  test_metadata_store.py  test_ndarray_store.py  test_ndarray_store_append.py  test_pandas_store.py  test_pickle_store.py  test_version_store.py  test_version_store_audit.py  test_version_store_corruption.py
tests/integration/tickstore/: test_toplevel.py  test_ts_read.py  test_ts_write.py
tests/unit/: test_arctic.py  test_auth.py  test_compression.py  test_decorators_unit.py  test_fixtures.py  test_hooks.py  test_hosts.py  test_multi_index.py  test_util.py
tests/unit/date/: test_mktz.py  test_util.py
(+21 files in other folders)
